--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,26 @@ debug=true
 logging.level.com.shareeverything=${DEFAULT_LOG_LEVEL}
 logging.level.root=error
 logging.config=${SPRING_CONFIG_LOCATION}logback.xml
+management.endpoints.web.exposure.include=*
+spring.jackson.serialization.fail-on-empty-beans=false
+
+
+## QuartzProperties
+spring.quartz.job-store-type = jdbc
+spring.quartz.properties.org.quartz.threadPool.threadCount = 5
+org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+
+
+## MailProperties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sakibkuetcse@gmail.com
+spring.mail.password=sakibroll1207017asifroll1207030
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Redis Config
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
