--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,26 @@ debug=true
 logging.level.com.shareeverything=${DEFAULT_LOG_LEVEL}
 logging.level.root=error
 logging.config=${SPRING_CONFIG_LOCATION}logback.xml
+
+
+# Message Queue specific configs for app1
+app1.exchange.name=app1-exchange
+app1.queue.name=app1-queue
+app1.routing.key=app1-routing-key
+
+# Message Queue specific configs for app2
+app2.exchange.name=app2-exchange
+app2.queue.name=app2-queue
+app2.routing.key=app2-routing-key
+
+
+#AMQP RabbitMQ configuration
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Additional RabbitMQ properties
+spring.rabbitmq.listener.simple.concurrency=4
+spring.rabbitmq.listener.simple.max-concurrency=8
+spring.rabbitmq.listener.simple.retry.initial-interval=5000
