--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ app2.routing.key=app2-routing-key
 
 
 #AMQP RabbitMQ configuration
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
